--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -3,6 +3,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> <%- title %> | CSE 340 App </title>
+    <meta name="description" content="CSE 340 - Web Backend Development -Fernando Cuba -course assignment">
+    <meta name="author" content="Fernando Cuba">
     <link rel="stylesheet" href="css/styles.css">
-
+    <link rel="stylesheet" href="css/larger.css">
+    <link rel="icon" href="images/site/favicon-32x32.png">
 </head>
