--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,18 +15,18 @@
 </div>
 <section class="card">
     <h2>Delorean Upgrades</h2>
-    <ul class="learninglinks"> <img src="images/upgrades/flux-cap.png" alt="Flux upgrade">
+    <div class="learninglinks"> <img src="images/upgrades/flux-cap.png" alt="Flux upgrade">
         <a href="" class="">Flux Capacitor</a>
-    </ul>
-    <ul class="learninglinks"> <img src="images/upgrades/flame.jpg" alt="Flame upgrade">
+    </div>
+    <div class="learninglinks"> <img src="images/upgrades/flame.jpg" alt="Flame upgrade">
         <a href="" class="">Flame Decals</a>
-    </ul>
-    <ul class="learninglinks"> <img src="images/upgrades/bumper_sticker.jpg" alt="Bumper upgrade">
+    </div>
+    <div class="learninglinks"> <img src="images/upgrades/bumper_sticker.jpg" alt="Bumper upgrade">
         <a href="" class="">Bumper Stickers</a>
-    </ul>
-    <ul class="learninglinks"> <img src="images/upgrades/hub-cap.jpg" alt="Hub upgrade">
+    </div>
+    <div class="learninglinks"> <img src="images/upgrades/hub-cap.jpg" alt="Hub upgrade">
         <a href="" class="">Hub Caps</a>
-    </ul>
+    </div>
 </section>
 <section class="card">
     <h2>DMC delorean Reviews</h2>
