--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -5,7 +5,7 @@
     <title> <%- title %> | CSE 340 App </title>
     <meta name="description" content="CSE 340 - Web Backend Development -Fernando Cuba -course assignment">
     <meta name="author" content="Fernando Cuba">
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/larger.css">
-    <link rel="icon" href="images/site/favicon-32x32.png">
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/larger.css">
+    <link rel="icon" href="/images/site/favicon-32x32.png">
 </head>
