--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,45 +1,46 @@
 <h1>Welcome to CSE Motors!</h1>
-<div class="hero">
-    <picture class="heroimg">
-        <source media="(max-width: 400px)" srcset="images/vehicles/delorean-tn.jpg">
-        <source media="(max-width: 960px)" srcset="images/vehicles/delorean.jpg">
-        <img src="images/vehicles/delorean.jpg" alt="Delorean car" loading="lazy" width="1279" height="800">
-    </picture>
-    <div class="herolabel">
-        <p>DMC Delorean</p>
-        <p>3 Cup holders</p>
-        <p>Superman doors</p>
-        <p>Fuzzy dice!</p>
-        <img src="images/site/own_today.png" alt="Invitation button">
+<%- messages() %>
+    <div class="hero">
+        <picture class="heroimg">
+            <source media="(max-width: 400px)" srcset="images/vehicles/delorean-tn.jpg">
+            <source media="(max-width: 960px)" srcset="images/vehicles/delorean.jpg">
+            <img src="images/vehicles/delorean.jpg" alt="Delorean car" loading="lazy" width="1279" height="800">
+        </picture>
+        <div class="herolabel">
+            <p>DMC Delorean</p>
+            <p>3 Cup holders</p>
+            <p>Superman doors</p>
+            <p>Fuzzy dice!</p>
+            <img src="images/site/own_today.png" alt="Invitation button">
+        </div>
     </div>
-</div>
-<section class="card">
-    <h2>Delorean Upgrades</h2>
-    <div class="learninglinks"> <img src="images/upgrades/flux-cap.png" alt="Flux upgrade">
-        <a href="" class="">Flux Capacitor</a>
-    </div>
-    <div class="learninglinks"> <img src="images/upgrades/flame.jpg" alt="Flame upgrade">
-        <a href="" class="">Flame Decals</a>
-    </div>
-    <div class="learninglinks"> <img src="images/upgrades/bumper_sticker.jpg" alt="Bumper upgrade">
-        <a href="" class="">Bumper Stickers</a>
-    </div>
-    <div class="learninglinks"> <img src="images/upgrades/hub-cap.jpg" alt="Hub upgrade">
-        <a href="" class="">Hub Caps</a>
-    </div>
-</section>
-<section class="card">
-    <h2>DMC delorean Reviews</h2>
-    <ul>
-        <li class="label">
-            "So fast it's almost like traveling in time".(4/5) </li>
-        <li class="label">
-            "So fast it's almost like traveling in time".(4/5) </li>
-        <li class="label">
-            "So fast it's almost like traveling in time".(4/5) </li>
-        <li class="label">
-            "So fast it's almost like traveling in time".(4/5) </li>
-        <li class="label">
-            "So fast it's almost like traveling in time".(4/5) </li>
-    </ul>
-</section>
+    <section class="card">
+        <h2>Delorean Upgrades</h2>
+        <div class="learninglinks"> <img src="images/upgrades/flux-cap.png" alt="Flux upgrade">
+            <a href="" class="">Flux Capacitor</a>
+        </div>
+        <div class="learninglinks"> <img src="images/upgrades/flame.jpg" alt="Flame upgrade">
+            <a href="" class="">Flame Decals</a>
+        </div>
+        <div class="learninglinks"> <img src="images/upgrades/bumper_sticker.jpg" alt="Bumper upgrade">
+            <a href="" class="">Bumper Stickers</a>
+        </div>
+        <div class="learninglinks"> <img src="images/upgrades/hub-cap.jpg" alt="Hub upgrade">
+            <a href="" class="">Hub Caps</a>
+        </div>
+    </section>
+    <section class="card">
+        <h2>DMC delorean Reviews</h2>
+        <ul>
+            <li class="label">
+                "So fast it's almost like traveling in time".(4/5) </li>
+            <li class="label">
+                "So fast it's almost like traveling in time".(4/5) </li>
+            <li class="label">
+                "So fast it's almost like traveling in time".(4/5) </li>
+            <li class="label">
+                "So fast it's almost like traveling in time".(4/5) </li>
+            <li class="label">
+                "So fast it's almost like traveling in time".(4/5) </li>
+        </ul>
+    </section>
