--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -10,6 +10,14 @@
             name="Pword" placeholder="********" required
             pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$">
         <button> <input type="submit" value="Register"></button>
-
+        <% if (errors) { %>
+            <ul class="notice">
+                <% errors.array().forEach(error=> { %>
+                    <li>
+                        <%= error.msg %>
+                    </li>
+                    <% }) %>
+            </ul>
+            <% } %>
     </fieldset>
 </form>
