--- a/views/inventory/vehicle-detail.ejs
+++ b/views/inventory/vehicle-detail.ejs
@@ -4,6 +4,6 @@
     </h1>
     <% } else { res.redirect('/') } %>
 
-        <%# messages() %>
-
-            <%- display_vehicle %>
+        <div class="vehicle-detail">
+            <%-detail%>
+        </div>
