--- a/views/inventory/vehicle-detail.ejs
+++ b/views/inventory/vehicle-detail.ejs
@@ -1,9 +1,9 @@
-<% if (title) { %>
-    <h1>
-        <%= title %>
+<%# if (title) { %>
+<%#    <h1>
+<%#= title %> %#>
     </h1>
-    <% } else { res.redirect('/') } %>
+    <%# } else { res.redirect('/') } %>
 
         <div class="vehicle-detail">
-            <%-detail%>
-        </div>
+<%#-detail%> 
+        </div>   
