--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,5 @@
 <% const d=new Date(); let year=d.getFullYear(); %>
     <footer>
+        <p> <a title="Click to see 500 error" href="/error500">See server error here</a></p>
         <p class="copyright">&copy; <%= year %>, CSE 340 App</p>
     </footer>
