--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,12 +3,8 @@
 *:before,
 *:after {
   box-sizing: border-box;
-}
-
-* {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 
 body {
@@ -19,7 +15,7 @@ body {
 }
 
 .siteName {
-  font-size: 1.5em;
+  font-size: 1.8rem;
   font-weight: bold;
   margin-left: 40px;
 }
@@ -30,42 +26,64 @@ body {
 }
 
 header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   margin-bottom: 20px;
   background-color: white;
-  display: flex;
-  padding: 20px;
-  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 10px 20px;
+  border: 1px solid rgba(67, 164, 42, 0.936);
+  position: relative;
+}
+
+/* Hamburger menu icon for small screens */
+#menu-icon {
+  display: block;
+  font-size: 2rem;
+  cursor: pointer;
+}
+
+#menu-icon:hover {
+  color: #ccc;
+}
+
+
+.show-menu {
+  display: flex !important;
 }
 
 nav {
-  margin-bottom: 20px;
-  margin: 0 auto;
-  height: 40px;
-  max-width: 1200px;
-  display: flex;
-  flex-direction: column;
-  list-style: none;
   background-color: #36454f;
+  width: 100%;
+}
+
+nav ul {
+  list-style-type: none;
+  display: none; /* Hidden initially */
+  flex-direction: column;
+  padding: 0;
+}
+
+nav ul li {
+  padding: 10px;
+  text-align: center;
+}
+
+nav ul li a {
+  text-decoration: none;
   color: #fff;
+  font-size: 1.2rem;
+  display: block;
+}
+
+nav ul li a:hover {
+  background-color: #2c3e50;
 }
 
 h1 {
   font-size: 2rem;
   margin-bottom: 20px;
   grid-column: span 2;
-}
-
-
-nav ul {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-  text-align: center;
-}
-
-nav li {
-  margin-top: 10px;
-  margin-bottom: 10px;
 }
 
 main {
@@ -174,6 +192,55 @@ footer p {
 img {
   margin-right: 10px;
 }
+
+.vehicle-detail {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  justify-content: center;
+  padding: 20px;
+  gap: 20px;
+}
+
+.vehicle-image {
+  flex: 1 1 40%;
+  max-width: 600px;
+}
+
+.vehicle-image img {
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+}
+
+.vehicle-info {
+  flex: 1 1 50%;
+  max-width: 600px;
+}
+
+.vehicle-vname {
+  font-size: 2rem;
+  margin-bottom: 10px;
+}
+
+.vehicle-info p {
+  font-size: 1rem;
+  margin-bottom: 10px;
+}
+
+.price {
+  font-size: 2.9rem;
+  color: #f4df00bd;
+  font-weight: bold;
+  background-color: #2c3e50;
+  padding: 5px;
+}
+
+.vehicle-specs p {
+  font-size: 1rem;
+  margin-bottom: 8px;
+}
+
 
 
 @keyframes fadeIn {
