--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,4 +1,3 @@
-/******* Change Box Model ***************/
 *,
 *:before,
 *:after {
@@ -36,7 +35,6 @@ header {
   position: relative;
 }
 
-/* Hamburger menu icon for small screens */
 #menu-icon {
   display: block;
   font-size: 2rem;
@@ -195,50 +193,51 @@ img {
 
 .vehicle-detail {
   display: flex;
-  flex-wrap: wrap;
-  align-items: flex-start;
-  justify-content: center;
+  flex-direction: column;
+  max-width: 1200px;
+  margin: 0 auto;
   padding: 20px;
-  gap: 20px;
+  background-color: #f9f9f9;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
 }
 
-.vehicle-image {
-  flex: 1 1 40%;
-  max-width: 600px;
+.vehicle-detail h2 {
+  font-size: 2rem;
+  text-align: center;
+  margin-bottom: 20px;
+  color: #333;
 }
 
 .vehicle-image img {
   width: 100%;
   height: auto;
-  border-radius: 10px;
+  border-radius: 8px;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+
 }
 
 .vehicle-info {
-  flex: 1 1 50%;
-  max-width: 600px;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+  margin-top: 20px;
 }
 
-.vehicle-vname {
-  font-size: 2rem;
-  margin-bottom: 10px;
-}
-
-.vehicle-info p {
-  font-size: 1rem;
-  margin-bottom: 10px;
-}
-
-.price {
+.vehicle-info .price {
   font-size: 2.9rem;
   color: #f4df00bd;
   font-weight: bold;
   background-color: #2c3e50;
   padding: 5px;
+  margin-bottom: 20px;
+
 }
 
 .vehicle-specs p {
+  margin: 10px 0;
   font-size: 1rem;
-  margin-bottom: 8px;
+  color: #555;
 }
 
 
