--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -10,7 +10,7 @@
         <label> Email*<input type="email" name="account_email" id="accountEmail" placeholder="someone@gmail.com" required value="<%= locals.account_email%>"></label>
         <label> Password*</label>
         <div>There must be at least 12 characters, one must be a number, one must be a lowercase letter, one must be a
-            capital letter, and one must be a non-alphanumeric character.</div><input type="password" id="accountPassword"
+            capital letter, and one must be a non-alphanumeric character.</div><input type="password" id="account_password"
             name="account_password" placeholder="********" required
             pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$">
         <button type="submit">Register</button>
