--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -1,3 +1,11 @@
 <h1><%= title %></h1>
 <%- messages() %>
 <%-management%> 
+
+<h2>Manage Inventory</h2>
+<p>Select a classification from following List</p>
+<%-classificationSelect%>  
+<table id="inventoryDisplay"></table>
+<noscript>JavaScript must be enabled to use this page.</noscript>
+
+<script src="../../js/inventory.js"></script>
