update information week 6 now

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="en">
 <h1>Welcome to CSE Motors!</h1>
 <%- messages() %>
     <div class="hero">
@@ -44,3 +46,4 @@
                 "So fast it's almost like traveling in time".(4/5) </li>
         </ul>
     </section>
+    </html>
