--- a/views/account/logged.ejs
+++ b/views/account/logged.ejs
@@ -1,3 +1,14 @@
 <%-messages()%>
 <h1>Welcome, <%= account_firstname%></h1>
 <p>You're logged in!</p>
+
+<div>
+<a href="/account/update/<%= user.account_id %>">Edit Account Information</a>
+<% if (account_type === 'Admin' || account_type === 'Employee') { %>
+    <div>
+        <h3>Inventory Management</h3>
+        <a href="/inv">Manage Inventory</a>
+    </div>
+<% } %>
+
+</div>
