Reminders task started

--- a/views/account/logged.ejs
+++ b/views/account/logged.ejs
@@ -10,5 +10,7 @@
         <a href="/inv">Manage Inventory</a>
     </div>
 <% } %>
+<h3>Reminders</h3>
+<a href="/reminders">View Reminders</a>
 
 </div>
