--- a/views/inventory/add-inventory.ejs
+++ b/views/inventory/add-inventory.ejs
@@ -13,10 +13,10 @@
     <div class="form-display">
 <form method="post" action="/inv/add-inventory">
     <fieldset>
-        <label> Brand*<input type="text" name="inv_make" id="inv_make" required value="<%= locals.inv_make %>" minlength="3"pattern="^[A-Za-z0-9 ]{3,}$"></label>
+        <label> Brand*<input type="text" name="inv_make" id="inv_make" required value="<%= locals.inv_make %>" minlength="3" pattern="^[A-Za-z0-9 ]{3,}$"></label>
         <label> Model*<input type="text" name="inv_model" id="inv_model" required value="<%= locals.inv_model %>" minlength="3"  pattern="^[A-Za-z0-9 ]{3,}$"></label>
-        <label> Year*<input type="text" name="inv_year" id="inv_year" required value="<%= locals.inv_year %>" min="1900"  max="2100" > </label>
-        <label> Description*<textarea name="inv_description" id="inv_description" required value="<%= locals.inv_description %>"></textarea></label>
+        <label> Year*<input type="text" name="inv_year" id="inv_year" required value="<%= locals.inv_year %>"> </label>
+        <label> Description*<textarea name="inv_description" id="inv_description" required></textarea></label>
         <label> Price*<input type="number" name="inv_price" id="inv_price" required value="<%= locals.inv_price %>" min="0" step="0.01"></label>
         <label> Miles*<input type="number" name="inv_miles" id="inv_miles" required value="<%= locals.inv_miles %>" min="0"></label>
         <label> Color*<input type="text" name="inv_color" id="inv_color" required value="<%= locals.inv_color %>" > </label>
